[package]
name = "babyjubjub-ark"
version = "0.0.1"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-ark"
readme = "README.md"

[dependencies]
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }


# ff = {package="ff_ce" , version= "0.11", features = ["derive"]}
# rand = "0.8" # WIP
# num = "0.4"
# num-bigint = {version = "0.4", features = ["rand"]}
# num-traits = "0.2.8"
blake-hash = {version="0.4.0", optional=true}
blake = {version="2.0.1", optional=true}
generic-array = "0.14"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"


[[bench]]
name = "bench_babyjubjub"
harness = false

[features]
default = ["blake-hash"]
aarch64 = ["blake"]
